@@ -6,9 +6,6 @@ import it.pagopa.pn.template.internal.rest.v1.dto.DocumentChanges;
 import it.pagopa.pn.template.internal.rest.v1.dto.DocumentInput;
 import it.pagopa.pnss.common.constant.*;
 import it.pagopa.pnss.common.client.exception.DocumentKeyNotPresentException;
-import it.pagopa.pnss.common.client.exception.PatchDocumentExcetpion;
-import it.pagopa.pnss.common.client.exception.RetentionException;
-import it.pagopa.pnss.common.exception.InvalidNextStatusException;
 import it.pagopa.pnss.common.model.dto.MacchinaStatiValidateStatoResponseDto;
 import it.pagopa.pnss.common.model.pojo.DocumentStatusChange;
 import it.pagopa.pnss.common.rest.call.machinestate.CallMacchinaStati;
@@ -23,8 +20,8 @@ import it.pagopa.pnss.repositorymanager.exception.ItemAlreadyPresent;
 import it.pagopa.pnss.repositorymanager.exception.RepositoryManagerException;
 import it.pagopa.pnss.repositorymanager.service.DocTypesService;
 import it.pagopa.pnss.repositorymanager.service.DocumentService;
-import it.pagopa.pnss.transformation.service.CommonS3ObjectService;
 import lombok.extern.slf4j.Slf4j;
+import org.apache.tika.utils.StringUtils;
 import org.springframework.stereotype.Service;
 import reactor.core.publisher.Mono;
 import software.amazon.awssdk.enhanced.dynamodb.DynamoDbAsyncTable;
@@ -33,14 +30,12 @@ import software.amazon.awssdk.enhanced.dynamodb.Key;
 import software.amazon.awssdk.enhanced.dynamodb.TableSchema;
 import software.amazon.awssdk.regions.Region;
 import software.amazon.awssdk.services.s3.S3AsyncClient;
-import software.amazon.awssdk.services.s3.model.NoSuchKeyException;
 import software.amazon.awssdk.services.s3.model.PutObjectTaggingRequest;
 import software.amazon.awssdk.services.s3.model.PutObjectTaggingResponse;
 
 import java.util.Map;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.atomic.AtomicReference;
-import java.util.function.Function;
 
 import static it.pagopa.pnss.common.constant.Constant.STORAGE_TYPE;
 import static it.pagopa.pnss.common.utils.DynamoDbUtils.DYNAMO_OPTIMISTIC_LOCKING_RETRY;
@@ -48,7 +43,7 @@ import static it.pagopa.pnss.common.utils.DynamoDbUtils.DYNAMO_OPTIMISTIC_LOCKIN
 
 @Service
 @Slf4j
-public class DocumentServiceImpl extends CommonS3ObjectService implements DocumentService {
+public class DocumentServiceImpl implements DocumentService {
 
     private final ObjectMapper objectMapper;
     private final DynamoDbAsyncTable<DocumentEntity> documentEntityDynamoDbAsyncTable;
@@ -139,7 +134,7 @@ public class DocumentServiceImpl extends CommonS3ObjectService implements Docume
                    .doOnError(DocumentKeyNotPresentException.class, throwable -> log.debug(throwable.getMessage()))
                    .zipWhen(documentEntity -> {
 
-                       if(!documentChanges.getDocumentState().isBlank()) {
+                       if(!StringUtils.isBlank(documentChanges.getDocumentState())) {
                            var documentStatusChange = new DocumentStatusChange();
                            documentStatusChange.setXPagopaExtchCxId(documentEntity.getClientShortCode());
                            documentStatusChange.setProcessId("SS");
@@ -153,7 +148,7 @@ public class DocumentServiceImpl extends CommonS3ObjectService implements Docume
                    .map(tuple -> {
                        DocumentEntity documentEntityStored = tuple.getT1();
                        log.debug("patchDocument() : (recupero documentEntity dal DB) documentEntityStored = {}", documentEntityStored);
-                       if (documentChanges.getDocumentState() != null && !documentChanges.getDocumentState().isBlank()) {
+                       if (!StringUtils.isBlank(documentChanges.getDocumentState())) {
                            // il vecchio stato viene considerato nella gestione della retentionUntil
                            oldState.set(documentEntityStored.getDocumentState());
                            boolean statusFound= false;
@@ -192,7 +187,7 @@ public class DocumentServiceImpl extends CommonS3ObjectService implements Docume
                     		   documentChanges.getDocumentState().toUpperCase().equals(Constant.AVAILABLE) ||
                     		   documentChanges.getDocumentState().toUpperCase().equals(Constant.ATTACHED))) {
 
-	                       log.info("patchDocument() : START Tagging");
+	                       log.debug("patchDocument() : START Tagging");
 	                       Region region = Region.of(awsConfigurationProperties.regionCode());
 	                       S3AsyncClient s3 = S3AsyncClient.builder().region(region).build();
 	                       String storageType;
